--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Finlandica:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600&family=Lobster+Two:wght@400;700&family=Shadows+Into+Light&family=Work+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/fontawesome.min.css">
     <title>DonateforDefenseless</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -28,6 +29,35 @@
             <h1 class="first">500tk</h1>
             <h1 class="first">1000tk</h1>
             <h1 class="first">5000tk</h1>
+        </div>
+        <div id="input-area">
+            <input type="text" placeholder="other Amount(taka)">
+        </div>
+        <a href="#">Donate Now</a>
+    </section>
+    <section >
+        <div id="donate-plane">
+            <h1>Our Donate plane</h1>
+            <p>“Would you like to make a donation to…”The Prophet (Peace Be Upon Him) said, <br>“Protect yourself by giving charity, even with half of a date.”</p>
+        </div>
+    </section>
+    <section class="donate-for">
+        <div class="for-who" id="green">
+            <img src="./donate-photo/icons/food.png" alt="">
+            <h1>food for a family</h1>
+             <p>We provide a food for rode side family.Many poor family dont eat a 3 times. This type of family now are attacted many health issu. </p>
+        </div>
+
+        <div  class="for-who" id="red">
+            <img src="./donate-photo/icons/shelter.png" alt="">
+            <h1>shelter for a family</h1>
+             <p>We provide a food for rode side family.Many poor family dont eat a 3 times. This type of family now are attacted many health issu. </p>
+        </div>
+
+        <div  class="for-who" id="yellow">
+            <img src="./donate-photo/icons/Frame-1.png" alt="">
+            <h1>Education for a child</h1>
+             <p>We provide a food for rode side family.Many poor family dont eat a 3 times. This type of family now are attacted many health issu.so we proud of our donater and our team. </p>
         </div>
     </section>
 </body>
