--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div id="input-area">
             <input type="text" placeholder="other Amount(taka)">
         </div>
-        <a href="#">Donate Now</a>
+          <a href="#">Donate Now</a>
     </section>
     <section >
         <div id="donate-plane">
@@ -58,6 +58,38 @@
             <img src="./donate-photo/icons/Frame-1.png" alt="">
             <h1>Education for a child</h1>
              <p>We provide a food for rode side family.Many poor family dont eat a 3 times. This type of family now are attacted many health issu.so we proud of our donater and our team. </p>
+        </div>
+    </section>
+    <section class="news-section">
+            <p>/insigst/</p>
+            <h1>News Feeds</h1>
+    </section>
+    <section class="blog-section">
+              <div class="blog-div">
+                <img src="./donate-photo/images/donation10.jpg" alt="">
+                <h3>24th decamber 2021</h3>
+                <h1>Provid pure water and frees food for Flood affected area</h1>
+              </div>
+
+              <div class="blog-div">
+                <img src="./donate-photo/images/donation6.jpg" alt="">
+                <h3>2nd may  2022</h3>
+                <h1>Organization for every mile you run, walk or bike.</h1>
+              </div>
+
+              <div class="blog-div">
+                <img src="./donate-photo/images/donation11.jpg" alt="">
+                <h3>10th may 2022</h3>
+                <h1>
+                    Charity Miles sends a small donation to a non-profit</h1>
+              </div>
+    </section>
+    <section class="join-section">
+        <h1>Get My Updates</h1>
+        <p>Charity, in Christian thought, the highest form of love,<br> signifying the reciprocal love between God and man that is made manifest in unselfish love of one's fellow men.</p>
+        <div class="join-div">
+          <input type="email" placeholder="Email">
+          <a href="#">Subscribe</a>
         </div>
     </section>
 </body>
