--- a/index.html
+++ b/index.html
@@ -92,5 +92,9 @@
           <a href="#">Subscribe</a>
         </div>
     </section>
+    <section class="footer">
+              <h1>May allah bless you</h1>
+             <p>© Copyright 2022 donatefordefenlass. - All Right's Reserved</p>
+    </section>
 </body>
 </html>
